--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   # PostgreSQL Database Service
-  - type: postgres
-    # Bắt đầu thụt lề vào 2 khoảng trắng so với dòng '- type: postgres'
+  - type: pserv
+    runtime: postgres
     name: school-inventory-db
     plan: free
     databaseName: school_inventory
@@ -9,24 +9,17 @@ services:
 
   # Spring Boot Web Service
   - type: web
-    # Bắt đầu thụt lề vào 2 khoảng trắng so với dòng '- type: web'
     name: school-inventory-app
     env: java
     plan: free
 
-    # Thay thế bằng URL kho Git của bạn
     repo: https://github.com/TuanAnh-AKA/Quan_Ly_Kho_Truong_Hoc.git
     branch: main
 
-    # Build Command
     buildCommand: ./mvnw clean install -DskipTests
-
-    # Start Command
     startCommand: java -jar target/quan_ly_kho-0.0.1-SNAPSHOT.jar
 
-    # Environment Variables for DB connection
     envVars:
-      # LƯU Ý: Các mục con của envVars (như key) phải thụt lề tiếp
       - key: DATABASE_URL
         fromDatabase:
           name: school-inventory-db
