--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,42 @@
+# ======================================================
+# 🚀 CẤU HÌNH CHUNG CHO RENDER
+# ======================================================
+
 # ----- Cấu hình Server -----
 server.port=${PORT:8080}
 spring.application.name=quan_ly_kho
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 
-# ----- Cấu hình PostgreSQL qua Render -----
+# ======================================================
+# 🐘 CẤU HÌNH DATABASE - PostgreSQL (Render cung cấp)
+# ======================================================
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# ----- Cấu hình JPA -----
+# ----- Cấu hình JPA / Hibernate -----
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.defer-datasource-initialization=true
-# ----- Cấu hình Email -----
-spring.mail.host=smtp.gmail.com
+
+# ======================================================
+# ✉️ CẤU HÌNH EMAIL - DÙNG SENDGRID
+# ======================================================
+spring.mail.host=smtp.sendgrid.net
 spring.mail.port=587
-spring.mail.username=anh.tuan.08355@gmail.com
+spring.mail.username=apikey
+spring.mail.password=${SPRING_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.password=${SPRING_MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.debug=false
+
+# ======================================================
+# 🔔 CẤU HÌNH KHÁC (NẾU CÓ)
+# ======================================================
+# Thời gian OTP (phút)
+app.otp.expiration-minutes=5
